Feedback on previous comments

--- a/paper/appendix.tex
+++ b/paper/appendix.tex
@@ -78,16 +78,8 @@ Therefore, we can collect all the Jacobian matrices multiplied by either $\Gamma
 \end{aligned}
 \end{equation}
 
-\cj{if space permits, maybe a description of the stacking should be added?}
+\cj{if space permits, maybe a description of the stacking should be added? xlz: it will be very verbose}
 We stack the matrices to a huge matrix $A$, stack $\delta x, \delta l$ to $\delta \theta$ and vectors to $b$, and obtain the standard least squares problem.
 \begin{equation}
 \delta \theta^* = \operatorname*{arg\,min}_{\delta \theta}||A\delta \theta - b||^2
 \end{equation}
-
-
-
-
-
-
-
-
