--- a/paper/cs242_slam.bib
+++ b/paper/cs242_slam.bib
@@ -110,3 +110,23 @@
   year={2006},
   organization={IEEE}
 }
+
+@techreport{weiss,
+  author = {Jonathan S. Yedidia and William T. Freeman and Yair Weiss},
+  title = {Understanding Belief Propagation and its Generalizations},
+  institution = {Mitsubishi Electric Research Laboratories},
+  year = {2001},
+  number = {TR2001-22},
+}
+
+@misc{opencv,
+    title = {The {OpenCV} Library},
+    howpublished = "\url{http//opencv.org}",
+}
+
+@inproceedings{ros,
+    author = {Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully B. and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y.},
+    booktitle = {ICRA Workshop on Open Source Software},
+    title = {{ROS}: an open-source Robot Operating System},
+    year = {2009}
+}
