--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -16,7 +16,8 @@
 %\documentstyle[nips13submit_09,times,art10]{article} % For LaTeX 2.09
 
 
-\title{\LARGE \bf Robust Graph SLAM in Dynamic Environments with Moving Landmarks}
+\title{\LARGE \bf Robust Graph SLAM in Dynamic Environments \\
+with Moving Landmarks}
 
 
 \author{Lingzhu Xiang$^{1}$ \and Zhile Ren$^{1}$ \and Mengrui Ni$^{1}$ \and Odest Chadwicke Jenkins$^{1}$
