Update teaser image and caption

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -25,7 +25,7 @@ kidnapped by the movement, or resulting in distorted maps.
 \begin{figure}[t!]
 \centering
   \includegraphics[width=0.48\textwidth]{fig/teaser}
-  \caption{Estimating the map and trajectory (blue) given simulated moving landmarks (black circle) with associated observations (yellow) on the Victoria Park dataset~\cite{isam}, and the GPS ground truth (red). The top row shows that the estimation obtained by conventional graph optimization given 2 and 5 moving landmarks is corrupted without considering landmark mobility. The bottom shows a robust estimation of the same data using our proposed method. Note that stationary landmarks are not shown, and GPS is unavailable at several places. }
+  \caption{Estimating the map and trajectory (blue) on the Victoria Park dataset [4] given landmarks corrupted by simulated movement (black circle) of associated observations (yellow) and GPS ground truth (red).  (Top row) the estimation obtained by conventional graph optimization given N=2 (left) and N=5 (right) landmarks corrupted by movement. (Bottom row) the result of mobility-robust map estimation of the same data using our proposed method. Note that stationary landmarks are not shown, and GPS is unavailable at several locations.}
   \label{fig:teaser}
 \end{figure}
 
