Clarify figures' dataset per review 4, note 3

--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -3,7 +3,8 @@
 \begin{figure*}[!ht]
 \makebox[\textwidth][c]{\includegraphics[width=\textwidth]{fig/baseline-mm}}
 \caption{The optimal estimates of the trajectory and landmark positions
-obtained by Max-Mixture graph SLAM.  Left: low convergence uncertainty
+obtained by Max-Mixture graph SLAM on the Victoria Park dataset.
+ Left: low convergence uncertainty
 (measured by objective value). Middle: high convergence uncertainty because of
 rejection of outlier observations of landmark 249.  Right: low convergence
 uncertainty, no outlier detected by Max-Mixture.}
@@ -97,13 +98,13 @@ robust SLAM methods would fail.
 \centering
 \begin{minipage}[b]{0.48\textwidth}
   \includegraphics[width=\textwidth]{fig/small-movement}
-  \caption{Dataset corrupted by the landmark with small movement}
+  \caption{Dataset corrupted by the landmark with small movement on the Victoria Park dataset}
   \label{fig:small-movement}
 \end{minipage}
 \quad
 \begin{minipage}[b]{0.48\textwidth}
   \includegraphics[width=\textwidth]{fig/large-movement}
-  \caption{Dataset corrupted by the landmark with large movement}
+  \caption{Dataset corrupted by the landmark with large movement on the Victoria Park dataset}
   \label{fig:large-movement}
 \end{minipage}
 \end{figure}
