Fix typo in section I per review 2, comment 2

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -39,7 +39,7 @@ mobility variable relates the belief of landmark positions with their
 measurements, and diminishes moving outlier landmarks within a
 measurement function (equation 4).
 Effectively, this mobility variables scale the covariances
-of Gaussian-distributed constraints to loosen the constrains of mobile landmarks such that their motion will push this distribution towards uniformity.
+of Gaussian distributions to loosen the constraints of mobile landmarks such that their motion will push this distribution towards uniformity.
   An EM-based algorithm, as well as
 an incremental version, is proposed to infer the mobility scaling
 and estimate the pose trajectory of a robot with respect to a
